--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -197,8 +197,9 @@
         }
 
         &-secondline {
-            width: 50px;
             top: 75px;
+            width: 112px;
+            right: 360px;
         }
     }
 
