--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,9 @@
     flex-direction: row;
     z-index: 1;
 
+    width: 100%;
+    height: 100%;
+
     &-appDragScroll {
         position: absolute;
         height: 100%;
@@ -140,7 +143,7 @@
         position: fixed;
         right: 0;
         top: 0;
-        z-index: 2;
+        z-index: 5;
         box-shadow: -6px 0px 16px rgba(0, 0, 0, 0.3);
 
         &-title {
@@ -150,7 +153,7 @@
             width: 340px;
             background-color: #e3e3e3;
             position: relative;
-            z-index: 2;
+            z-index: 5;
             box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
             font-family: 'Glacial Indifference Bold', sans-serif;
             display: flex;
@@ -180,7 +183,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        z-index: 2;
+        z-index: 5;
 
         &-mode {
             width: 120px;
@@ -211,7 +214,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        z-index: 2;
+        z-index: 5;
 
         button {
             width: 50px;
@@ -227,7 +230,7 @@
         position: fixed;
         height: 200px;
         width: 200px;
-        z-index: 2;
+        z-index: 5;
         background-color: white;
         box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2), 0px 6px 10px 0px rgba(0, 0, 0, 0.14), 0px 1px 18px 0px rgba(0, 0, 0, 0.12);
         padding: 5px;
@@ -235,6 +238,16 @@
         bottom: 25px;
         right: 360px;
         overflow: scroll;
+    }
+
+    &-tutorial {
+        &-resume {
+            border-radius: 10px;
+            position: fixed;
+            top: 10px;
+            left: 10px;
+            z-index: 5;
+        }
     }
 }
 
@@ -244,6 +257,11 @@
 }
 
 ::ng-deep .mat-button {
+    font-family: 'Glacial Indifference', sans-serif;
+    font-size: 16px;
+}
+
+::ng-deep .mat-raised-button {
     font-family: 'Glacial Indifference', sans-serif;
     font-size: 16px;
 }
