Changes to the tutorial + Removal of conditions on prerequisites (adding a condition on tasks other than subtasks preventing subtask prerequisites) + Addition of a condition for a unique common task symbol in a role + Fix clean-dialog text

--- a/src/app/components/tutorial/tutorial.component.scss
+++ b/src/app/components/tutorial/tutorial.component.scss
@@ -49,6 +49,10 @@
         &-title {
             font-family: "Glacial Indifference Bold";
         }
+
+        p {
+            white-space: pre-wrap;
+        }
     }
 
     &-optionnal {
