--- a/src/app/pieces/tasks/random-event/random-event.component.scss
+++ b/src/app/pieces/tasks/random-event/random-event.component.scss
@@ -85,6 +85,11 @@
             opacity: 0.75;
         }
 
+        mat-icon.disable {
+            opacity: 0.2;
+            cursor: not-allowed;
+        }
+
         &-header {
             display: flex;
             flex-direction: row;
