--- a/src/app/components/dialogs/clean-dialog/clean-dialog.component.html
+++ b/src/app/components/dialogs/clean-dialog/clean-dialog.component.html
@@ -1,5 +1,5 @@
-<h2 mat-dialog-title>{{'dialog_clean_title' | translate}}</h2>
-<mat-dialog-content>{{'dialog_clean_content' | translate}} {{data}} ?</mat-dialog-content>
+<h2 mat-dialog-title>{{'dialog_clear_title' | translate}}</h2>
+<mat-dialog-content>{{'dialog_clear_content' | translate}} {{data}} ?</mat-dialog-content>
 <mat-dialog-actions align="end">
     <button mat-button mat-dialog-close>{{'dialog_button_no' | translate}}</button>
     <button mat-button [mat-dialog-close]="true" cdkFocusInitial>{{'dialog_button_yes' | translate}}</button>
