--- a/src/app/pieces/tasks/task/task.component.scss
+++ b/src/app/pieces/tasks/task/task.component.scss
@@ -95,6 +95,11 @@
             opacity: 0.75;
         }
 
+        mat-icon.disable {
+            opacity: 0.2;
+            cursor: not-allowed;
+        }
+
         &-header {
             display: flex;
             flex-direction: row;
