--- a/src/app/components/dialogs/create-dialog/create-dialog.component.html
+++ b/src/app/components/dialogs/create-dialog/create-dialog.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title>{{'dialog_create_title' | translate}}</h2>
 <mat-dialog-content>{{'dialog_create_content' | translate}} {{data}} ?</mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close>{{'dialog_button_yes' | translate}}</button>
-    <button mat-button [mat-dialog-close]="true" cdkFocusInitial>{{'dialog_button_no' | translate}}</button>
+    <button mat-button mat-dialog-close>{{'dialog_button_no' | translate}}</button>
+    <button mat-button [mat-dialog-close]="true" cdkFocusInitial>{{'dialog_button_yes' | translate}}</button>
 </mat-dialog-actions>
