--- a/src/app/pieces/role/role.component.html
+++ b/src/app/pieces/role/role.component.html
@@ -10,6 +10,12 @@ matTooltipPosition="left" [matTooltipDisabled]="!tooltipService.activatedTooltip
         <mat-icon fontIcon="add" (click)="onClickAdd()"
         [matTooltip]="translate.instant('role_add_tooltip')"
         matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></mat-icon>
+        <mat-icon fontIcon="content_copy" (click)="onClickCopy()"
+        [matTooltip]="translate.instant('role_copy_tooltip')"
+        matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></mat-icon>
+        <mat-icon fontIcon="content_paste" (click)="onClickPaste()" *ngIf="copyRoleService.role && mission != copyRoleService.mission"
+        [matTooltip]="translate.instant('role_paste_tooltip')"
+        matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></mat-icon>
         <mat-icon fontIcon="backspace" (click)="onClickErase()"
         [matTooltip]="translate.instant('clearPiece_tooltip')"
         matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></mat-icon>
@@ -25,7 +31,7 @@ matTooltipPosition="left" [matTooltipDisabled]="!tooltipService.activatedTooltip
         <img src="./assets/background-images/role2_opacity0.png" draggable="false" *ngIf="i == 1"/>
         <div class="piece-form-intitule">
             <label for="intitule">{{'role_intitule_label' | translate}}</label>
-            <input name="intitule" type="text" [(ngModel)]="role.intitule" (change)="changeIntitule($event); validTutorialPhase4();" [placeholder]="translate.instant('role_intitule_placeholder')"
+            <input name="intitule" type="text" [(ngModel)]="role.intitule" (change)="intituleIsAlreadyUsed(); editTrace($event, 'name');; validTutorialPhase4();" [placeholder]="translate.instant('role_intitule_placeholder')"
             [matTooltip]="translate.instant('role_intitule_tooltip')"
             matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"/>   
         </div>
