--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -177,32 +177,15 @@
     }
 
     &-settings {
-        position: fixed;
-        width: 400px;
-        right: 360px;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        z-index: 5;
-
-        &-mode {
-            width: 120px;
-            background-color: white;
-            box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2), 0px 6px 10px 0px rgba(0, 0, 0, 0.14), 0px 1px 18px 0px rgba(0, 0, 0, 0.12);
-            padding: 5px;
-            border-radius: 10px;
-            text-align: center;
-        }
-
-        button {
-            width: 50px;
-            height: 50px;
-        }
-
-        &-secondline {
-            top: 75px;
-            width: 176px;
+        &-button {
+            position: fixed;
             right: 360px;
+            z-index: 5;
+
+            button {
+                width: 50px;
+                height: 50px;
+            }
         }
     }
 
@@ -252,18 +235,10 @@
 }
   
 .langIcon {
-    width: 28px;
-    height: 28px;
-}
-
-.buttonLang {
-    display: flex;
-    flex-direction: row;
-
-    img {
-        margin-top: 10px;
-        margin-right: 5px;
-    }
+    width: 24px;
+    height: 24px;
+    margin-right: 16px;
+    vertical-align: middle;
 }
 
 ::ng-deep .mat-tooltip {
@@ -293,5 +268,29 @@
 
     button:hover {
         opacity: 0.75;
+    }
+
+    input {
+        margin-right: 18px;
+        height: 18px;       
+        width: 18px;
+        pointer-events: none;
+        vertical-align: middle;
+    }
+
+    img {
+        margin-right: 16px;
+        vertical-align: middle; 
+    }
+
+    label {
+        font-family: 'Glacial Indifference', sans-serif;
+        font-size: 17px;
+        border-radius: 10px;
+        margin-bottom: 5px;
+    }
+
+    .mat-icon-no-color {
+        color: black;
     }
 }
